--- a/src/lobby/RoomList.css
+++ b/src/lobby/RoomList.css
@@ -2,6 +2,7 @@
 
 .container {
     width: 100%;
+    height: 100%;
     max-width: 800px;
     margin: 0 auto;
 }
@@ -10,7 +11,6 @@
     border: 1px solid #ccc;
     margin: 10px;
     padding: 10px;
-    width: 100%;
     box-sizing: border-box;
 }
 
@@ -38,7 +38,8 @@
 .game-room-title {
     margin: 10px;
     display: flex;
-    align-items: center;
+    flex-wrap: wrap;
+    align-items: flex-start;
 }
 
 .game-room-name {
